# taorobot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/media/: README.md
src/bringup/: CMakeLists.txt  README.md  package.xml
src/bringup/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/bringup/rviz/: localization.rviz  navigation.rviz  slam.rviz
src/coverage/: README.md  package.xml  setup.py
src/coverage/config/: coverage.yaml
src/coverage/coverage/: coverage_node.py
src/coverage/launch/: coverage.launch.py  coverage_bringup.launch.py
src/exploration/: README.md  package.xml  setup.py
src/exploration/config/: exploration.yaml
src/exploration/exploration/: exploration_node.py
src/exploration/launch/: exploration.launch.py  exploration_bringup.launch.py
src/graph_pose_slam/: CMakeLists.txt  README.md  package.xml
src/graph_pose_slam/config/: graph_pose_slam.yaml
src/graph_pose_slam/include/graph_pose_slam/: correlative_scan_matcher.hpp  graph_pose_slam.hpp  icp_scan_matcher.hpp  pose_graph.hpp  pose_graph_optimizer.hpp  types.hpp  utils.hpp
src/graph_pose_slam/launch/: graph_pose_slam.launch.py  map_server.launch.py
src/graph_pose_slam/maps/: slam_map.pgm  slam_map.yaml
src/graph_pose_slam/src/: correlative_scan_matcher.cpp  graph_pose_slam.cpp  graph_pose_slam_node.cpp  icp_scan_matcher.cpp  pose_graph.cpp  pose_graph_optimizer.cpp  scan_matcher.cpp  utils.cpp
src/graph_pose_slam/test/: test_correlative_scan_matcher.cpp  test_icp_scan_matcher.cpp  test_matcher_comparison.cpp
src/localization/: CMakeLists.txt  README.md  package.xml
src/localization/config/: localization.yaml
src/localization/include/localization/: geometry_utils.hpp  likelihood_field.hpp  particle_filter.hpp
src/localization/launch/: particle_filter_localization.launch.py
src/localization/src/: geometry_utils.cpp  likelihood_field.cpp  particle_filter.cpp  particle_filter_localization_node.cpp
src/mapping/: README.md  package.xml
src/mapping/config/: mapping.yaml
src/mapping/include/mapping/: occupancy_mapper.hpp
src/mapping/maps/: maze_map.pgm
src/mapping/src/: occupancy_mapper_node.cpp
src/motion_planning/: README.md
src/motion_planning/src/: motion_planning_node.cpp
src/path_follow_control/: README.md  package.xml
src/path_follow_control/config/: path_follow_control.yaml
src/semantic_mapping/: README.md  package.xml  setup.py
src/semantic_mapping/config/: detection.yaml  perception.yaml  semantic_map.yaml
src/semantic_mapping/launch/: semantic_mapping.launch.py
src/semantic_mapping/semantic_mapping/: perception_node.py  semantic_map.py  semantic_map_node.py  yolo_detector.py
src/semantic_mapping/semantic_mapping/detection/: yolo_detector.py
src/semantic_mapping/semantic_mapping/mapping/: semantic_map.py
src/semantic_mapping/semantic_mapping/ros/: object_detection_node.py  perception_node.py  semantic_map_node.py
src/simulation/: CMakeLists.txt  README.md  package.xml
src/simulation/config/: odometry_noise.yaml
src/simulation/launch/: bringup_simulation.launch.py  semantic_bringup_simulation.launch.py  spawn_robot.launch.py
src/simulation/models/objs/chair/: model.sdf
src/simulation/models/objs/coffee_table/: model.sdf
src/simulation/models/objs/office_chair_black/: model.sdf
src/simulation/models/objs/sofa/: model.sdf
src/simulation/models/objs/wooden_chair/: model.sdf
src/simulation/models/office/: model.config  model.sdf  zeki-chairs.stl  zeki-frame.stl  zeki-plants.stl  zeki-tables.stl
src/simulation/models/simple_room/: model.sdf
src/simulation/src/: depth_to_mm.cpp  ground_truth_map_to_odom.cpp
src/simulation/urdf/: my_robot.urdf
src/simulation/worlds/: office_world.sdf
src/slam_fastslam/: package.xml
src/slam_fastslam/config/: fastslam.yaml
src/slam_fastslam/launch/: fastslam.launch.py
src/slam_fastslam/src/: fastslam_node.cpp
