<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_pose_slam</name>
  <version>0.0.0</version>
  <description>Learning package for graph-based pose SLAM with 2D lidar and odometry.</description>
  <maintainer email="tj19970215@gmail.com">jtao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>libg2o</depend>
  <depend>geometry_msgs</depend>
  <depend>mapping</depend>
  <depend>nav_msgs</depend>
  <exec_depend>nav2_map_server</exec_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
